# ruff-docker-jenkins

./: Dockerfile  Jenkinsfile  docker-compose.yaml  dsl.yaml  pyproject.toml  sesstionTimeout.java  venvsetup.sh
src/: main.py
