[project]
name = "myproject"
version = "2.0.10"
description = "Projeto com Ruff e Docker"
authors = [{ name = "Seu Nome", email = "email@exemplo.com" }]
requires-python = "~=3.11.0"

[dependency-groups]
dev = ["ruff>=0.4.1,<0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/"]

[tool.ruff]
line-length = 88
target-version = "py311"